# flyfun-common

./: .gitignore  LICENSE  Package.resolved  Package.swift  README.md  pyproject.toml
.claude/: CLAUDE.md
Sources/FlyFunCommon/: FlyFunCommon.swift
Sources/FlyFunCommon/API/: FlyFunAPIError.swift  ServerValidationError.swift
Sources/FlyFunCommon/Auth/: AuthCallbackParser.swift  BearerTokenStore.swift  FlyFunAuthService.swift  KeychainBearerTokenStore.swift  RollingBearerSession.swift
Tests/FlyFunCommonTests/: AuthCallbackParserTests.swift  FlyFunCommonTests.swift  RollingBearerSessionTests.swift  ServerValidationErrorTests.swift  StubURLProtocol.swift
designs/: INDEX.md  auth.md  autorouter.md  db.md  fx.md  ios-auth.md  mcp-oauth.md  oauth-deeplink-hardening.md  openid-oauth-research.md  payments.md
python/: README.md  pyproject.toml
python/src/flyfun_common/: admin_hub.py  costs.py  fx.py
python/src/flyfun_common/auth/: __init__.py  config.py  magic_link.py  middleware.py  rate_limit.py  router.py
python/src/flyfun_common/db/: __init__.py  deps.py  engine.py  models.py
python/src/flyfun_common/oauth/: __init__.py  models.py  pkce.py  router.py
python/tests/: test_auth.py  test_costs.py  test_credentials.py  test_donations.py  test_encryption.py  test_fx.py  test_magic_link.py  test_oauth.py  test_scope_enforcement.py  test_sliding_session.py  test_stripe_client.py
src/flyfun_common/: __init__.py  admin.py  admin_hub.py  autorouter.py  costs.py  credentials.py  encryption.py
src/flyfun_common/auth/: __init__.py  config.py  jwt_utils.py  middleware.py  router.py
src/flyfun_common/db/: __init__.py  deps.py  engine.py  models.py
src/flyfun_common/oauth/: models.py  router.py
tests/: test_admin.py  test_auth.py  test_costs.py  test_oauth.py  test_sliding_session.py
(+3 files in other folders)
