[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flyfun-common"
version = "0.1.0"
description = "Shared user management and auth for flyfun services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "sqlalchemy>=2.0",
    "PyJWT>=2.8",
    "authlib>=1.3",
    "httpx",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
